--- a/contacts-api/package.json
+++ b/contacts-api/package.json
@@ -19,7 +19,6 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "swagger-autogen": "^2.23.7"
+    "nodemon": "^3.1.10"
   }
 }
